--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@mantine/core": "^8.1.2",
 		"@mantine/hooks": "^8.1.2",
 		"@mantine/notifications": "^8.1.2",
+		"@tabler/icons-react": "^3.34.0",
 		"firebase": "^11.9.1",
 		"js-confetti": "^0.12.0",
 		"react": "^19.1.0",
