--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"firebase": "^11.9.1",
 		"js-confetti": "^0.12.0",
 		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
+		"react-dom": "^19.1.0",
+		"rxjs": "^7.8.2"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.29.0",
