--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@mantine/core": "^8.1.2",
 		"@mantine/hooks": "^8.1.2",
+		"@mantine/modals": "^8.1.2",
 		"@mantine/notifications": "^8.1.2",
 		"@tabler/icons-react": "^3.34.0",
 		"firebase": "^11.9.1",
