--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"build:emulator": "tsc -b && vite build --mode emulator",
+		"dev:e2e": "yarn build:emulator && yarn firebase emulators:start",
 		"deploy": "yarn build && firebase deploy",
 		"lint": "eslint .",
 		"preview": "vite preview"
@@ -25,6 +26,8 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.29.0",
+		"@playwright/test": "^1.53.2",
+		"@types/node": "^24.0.10",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"@vitejs/plugin-react": "^4.5.2",
