--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -28,8 +28,14 @@ jobs:
           node-version: 20
           cache: yarn
 
+      - name: Enable Corepack (Yarn Berry)
+        run: |
+          corepack enable
+          corepack prepare yarn@3.8.5 --activate
+          yarn -v
+
       - name: Install dependencies
-        run: yarn ci
+        run: yarn install --immutable
 
       - name: Start emulator
         run: |
@@ -45,6 +51,6 @@ jobs:
         uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-           name: playwright-report
-           path: playwright-report/
-           retention-days: 30
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
