--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
 
+      - name: Install Playwright browsers
+        run: yarn playwright install --with-deps
+
       - name: Start emulator
         run: |
           yarn dev:e2e &
