update github action to run eslint

--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Install Playwright browsers
         run: yarn playwright install --with-deps
 
+      - name: Lint code
+        run: yarn eslint
+
       - name: Start emulator
         run: |
           yarn dev:e2e &
