--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -49,7 +49,7 @@ jobs:
           sleep 10
 
       - name: Run E2E tests
-        run: yarn playwright test --config=playwright.config.ts --output=playwright-report
+        run: yarn playwright test --config=playwright.config.ts --reporter=github --output=playwright-report
         env:
           CI: true
 
