--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -43,15 +43,8 @@ jobs:
       - name: Lint code
         run: yarn eslint
 
-      - name: Start emulator
-        run: |
-          yarn dev:e2e &
-          sleep 10
-
       - name: Run E2E tests
-        run: yarn playwright test --config=playwright.config.ts --reporter=github --output=playwright-report
-        env:
-          CI: true
+        run: yarn e2e:ci
 
       - name: Upload Playwright report
         uses: actions/upload-artifact@v4
