--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -8,6 +8,14 @@ on:
 permissions:
   contents: read
 
+env:
+  FIREBASE_AUTH_DOMAIN: ${{secrets.FIREBASE_AUTH_DOMAIN}}
+  FIREBASE_PROJECT_ID: ${{secrets.FIREBASE_PROJECT_ID}}
+  FIREBASE_STORAGE_BUCKET: ${{secrets.FIREBASE_STORAGE_BUCKET}}
+  FIREBASE_MESSAGING_SENDER_ID: ${{secrets.FIREBASE_MESSAGING_SENDER_ID}}
+  FIREBASE_APP_ID: ${{secrets.FIREBASE_APP_ID}}
+  FIREBASE_DATABASE_URL: ${{secrets.FIREBASE_DATABASE_URL}}
+
 concurrency:
   group: pr-checks-${{ github.event.pull_request.head.sha || github.ref }}
   cancel-in-progress: true
