--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -9,6 +9,7 @@ permissions:
   contents: read
 
 env:
+  FIREBASE_API_KEY: ${{secrets.FIREBASE_API_KEY}}
   FIREBASE_AUTH_DOMAIN: ${{secrets.FIREBASE_AUTH_DOMAIN}}
   FIREBASE_PROJECT_ID: ${{secrets.FIREBASE_PROJECT_ID}}
   FIREBASE_STORAGE_BUCKET: ${{secrets.FIREBASE_STORAGE_BUCKET}}
