--- a/.github/workflows/deploy-on-master.yml
+++ b/.github/workflows/deploy-on-master.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 
 permissions:
-  contents: read
+  contents: write
   id-token: write   # for workload identity auth (optional if you use service account key)
 
 env:
