--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "yarn firebase emulators:exec \"yarn vite\"",
 		"build": "tsc -b && vite build",
 		"build:emulator": "tsc -b && vite build --mode emulator",
 		"e2e:ci": "yarn firebase emulators:exec \"yarn build:emulator && yarn playwright test --config=playwright.config.ts --reporter=github --output=playwright-report\"",
