--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"firebase": "^11.9.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-qrcode-logo": "^4.0.0",
 		"rxjs": "^7.8.2"
 	},
 	"devDependencies": {
