--- a/.github/workflows/deploy-on-master.yml
+++ b/.github/workflows/deploy-on-master.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Add release tag
         run: |
-          git tag "release-$(date +'%Y-%m-%d:%H-%M-%S')"
+          git tag "release-$(date +'%Y-%m-%dT%H-%M-%S')"
           git push origin --tags
 
       - name: Notify deployment
